--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ colophon: "© MMXV — MMXVI by Cloudhan.<br>Content available under <a href='ht
 baseurl: ""
 url: "www.clouhan.me"
 
-twitter_username: 
+qq_username: 328695398
 github_username: symphonyh
 linkedin_username: 
 facebook_username: 
