--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: "Do what you love"
+title: "Cloudhan' Blog"
 author: "Cloudhan"
-description: "学习让我们保持年轻，梦想让我们充满活力。我们运用大脑，进行运作的时候，我们就不大会想不开心心的事情，我们会变得更开心和满足。"
+description: "我们运用大脑，进行运作的时候，我们就不大会想不开心心的事情，我们会变得更开心和满足。"
 keywords: "Ruby, Ruby on Rails, Ember.js, CSS, Javascript, jQuery, software Engineering, Ruby Programming,"
-biography: "开心的人是会解决问题的人。在生活中遇到挑战的时候，他们不会自虐，然后变得很消沉。他们会直面挑战，调动全身力量寻找解决办法。通过变成一个解决问题的人，你会建立自己的自信心和下决心要的事情和直面挑战的能力。"
+biography: "开心的人是会解决问题的人。他们会直面挑战，调动全身力量寻找解决办法。"
 colophon: "© MMXV — MMXVI by Cloudhan.<br>Content available under <a href='http://creativecommons.org/licenses/by-nc-sa/4.0/'>Creative Commons (BY-NC-SA)</a> unless otherwise noted.<br>This site is hosted at <a href='https://pages.github.com/'>Github Pages</a> and created with <a href='http://jekyllrb.com/'>Jekyll</a>."
 
 baseurl: ""
