--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Cloudhan' Blog"
+title: "Cloudhan' Tech Blog"
 author: "Cloudhan"
 description: "我们运用大脑，进行运作的时候，我们就不大会想不开心心的事情，我们会变得更开心和满足。"
 keywords: "Ruby, Ruby on Rails, Ember.js, CSS, Javascript, jQuery, software Engineering, Ruby Programming,"
